add some missing documentation, bump kind patch version, update go version in mod file, add arm64 to goreleaser

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -20,6 +20,7 @@ builds:
       - darwin
     goarch:
       - amd64
+      - arm64
 archives:
   - format: zip
     name_template: '{{ .ProjectName }}_{{ .Version }}_{{ .Os }}_{{ .Arch }}'
